# GradientDistillation

./: .gitignore  pyproject.toml  run.sh  visualization.ipynb
exp/: aqua20.ipynb  res_bug.ipynb
logged_files/distillation/fish4knowledge/dinov2_vitb/lyric-elevator-26/: cfg.json  cfg.pth
logged_files/distillation/fish4knowledge/dinov2_vitb/lyric-elevator-26/eval/: dinov2_vitb.pth
logged_files/distillation/fish4knowledge/dinov2_vitb/spring-silence-29/: cfg.json  cfg.pth
logged_files/distillation/fish4knowledge/dinov2_vitb/spring-silence-29/eval/: dinov2_vitb.pth
src/augmentation/: __init__.py  standard_aug.py
src/baselines/: centroids.py  full_dataset.py  neighbors.py  random_reals.py
src/config/: __init__.py  base_config.py  centroids_config.py  distill_config.py  eval_config.py  full_dataset_config.py  neighbors_config.py  random_reals_config.py
src/data/dataloaders/: __init__.py  aqua20.py  artbench.py  base.py  cub2011.py  fish.py  flowers102.py  food101.py  imagenet_susbset.py  spawrious.py  stanford_dogs.py  waterbirds.py
src/distillation/: eval.py  linear_gm.py
src/models/: __init__.py
src/models/dino/: eval_copy_detection.py  eval_image_retrieval.py  eval_knn.py  eval_linear.py  eval_video_segmentation.py  main_dino.py  utils.py  video_generation.py  visualize_attention.py
src/my_utils/: __init__.py  device.py
src/synsets/: base.py  pixels.py  pyramid.py
wandb/: latest-run
wandb/run-20260414_112509-tf3a9sg1/: run-tf3a9sg1.wandb
wandb/run-20260414_112509-tf3a9sg1/files/: config.yaml  requirements.txt  wandb-metadata.json
